--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -183,4 +183,14 @@ html { overflow: hidden;}
 
 .background-grey {
   background-color: #dbdbdb;
+  background-size: 300%;
+  background-position: center;
+  filter: blur(15px);
+  -webkit-filter: blur(15px);
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  top: 0px;
+  right: 0px;
+  opacity: 0.3;
 }
