feat: seperate stylesheets and name appropriately

--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -40,186 +40,5 @@ $input-shadow: none;
 @import "node_modules/bulma/bulma.sass";
 
 // Custom Styling
-html { overflow: hidden;}
-
-.is-fullheight {
-  height: 100vh;
-}
-
-@media all and (max-width: 768px) {
-  .is-fullheight {
-    height: auto;
-  }
-}
-
-.is-maxheight {
-  height: 100%;
-}
-
-.border {
-  border: 2px solid #dbdbdb;
-  background-color: white;
-
-  .breakout {
-    margin: -2px !important;
-    padding: 2px !important;
-  }
-  
-  .input {
-    border: none !important;
-  }
-}
-
-.border-right {
-  border-right: 1rem solid #dbdbdb;
-  background-color: white;
-}
-
-.border-left {
-  border-left: 1rem solid white;
-  background-color: white;
-}
-
-@media all and (max-width: 1128px) {
-  html {
-    font-size: 14px;
-  }
-}
-
-@media all and (max-width: 768px) {
-  html {
-    font-size: 12px;
-  }
-}
-
-@keyframes flyout-modal {
-  0% { right: -66.66%; }
-  100% { right: 0%; }
-}
-
-@keyframes flyout-modal-back {
-  0% { right: 0%; }
-  100% { right: -66.66%; }
-}
-
-.is-absolute {
-  position: absolute;
-  z-index: 10;
-
-  &.is-visible {
-    animation-name: flyout-modal;
-    animation-duration: 1s;
-    animation-fill-mode: forwards;
-    right: -66.66%;
-  }
-
-  &.is-visually-hidden {
-    animation-name: flyout-modal-back;
-    animation-duration: 1s;
-    animation-fill-mode: forwards;
-    right: 0%;
-  }
-}
-
-.close-flyout-menu {
-  position: fixed;
-  top: 0px;
-  margin-left: calc(-2.45em - 60px);
-}
-
-.cap-height {
-  max-height: 100vh;
-  overflow-y: auto;
-}
-
-
-// Project Specific Styling
-.user-result {
-  text-align: center;
-  max-width: 300px;
-  margin: 0 auto;
-  position: relative;
-
-  & img {
-    border-radius: 100% !important;
-    width: 100% !important;
-    margin-bottom: 3rem;
-    border: 1.1rem solid #d6d6d6;
-    background-color: white;
-  }
-
-  .title.button {
-    text-align: left;
-    display: block;
-    z-index: 10;
-    position: absolute;
-    margin-top: -85px;
-    height: auto;
-  }
-
-  big.title.button {
-    margin-top: -125px !important;
-    
-  }
-}
-
-.repo-entry {
-  border: 3px solid #dbdbdb;
-  border-radius: 5px;
-  background-color: white ;
-  position: relative;
-  margin-top: 2rem;
-}
-
-.icon-holder {
-  position: absolute;
-  top: -17px;
-  right: 10px;
-  background: grey;
-  border: 2px solid;
-  padding: 5px 10px;
-  color: white
-}
-
-.background-grey {
-  background-color: #dbdbdb;
-  background-size: 300%;
-  background-position: center;
-  filter: blur(15px);
-  -webkit-filter: blur(15px);
-  position: absolute;
-  width: 100%;
-  height: 100vh;
-  top: 0px;
-  right: 0px;
-  opacity: 0.3;
-}
-
-
-.gg-close {
-  box-sizing: border-box;
-  position: relative;
-  display: block;
-  transform: scale(var(--ggs,1));
-  width: 42px;
-  height: 28px;
-  border: 4px solid transparent;
-  border-radius: 40px
-}
-.gg-close::after,
-.gg-close::before {
-  content: "";
-  display: block;
-  box-sizing: border-box;
-  position: absolute;
-  width: 32px;
-  height: 4px;
-  background: currentColor;
-  transform: rotate(45deg);
-  border-radius: 5px;
-  top: 8px;
-  left: 1px
-}
-.gg-close::after {
-  transform: rotate(-45deg)
-}
+@import "src/assets/css/addons.scss";
+@import "src/assets/css/theme.scss";
