--- a/src/assets/css/theme.scss
+++ b/src/assets/css/theme.scss
@@ -4,8 +4,10 @@
 .theme_user-result {
   text-align: center;
   max-width: 300px;
+  width: 100%;
   margin: 0 auto;
   position: relative;
+  border: none;
 
   & img {
     border-radius: 100% !important;
